--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,18 +1,72 @@
 <!DOCTYPE html>
+
 <html>
+
     <head>
+
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title> {% block title %} Fantasclic {% endblock %} </title>
 
         {% block stylesheets %}
-
+            <link rel="stylesheet" type="text/css" href={{ asset('css/bootstrap.css')}} />
+            <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css" />
         {% endblock %}
 
         {% block javascripts %}
-
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+            <script type="application/javascript" src="//cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"> </script>
         {% endblock %}
+
     </head>
+
+
     <body>
-        {% block body %}{% endblock %}
+
+        
+
+        <div class="container-fluid">
+
+            <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+
+                <ul class="navbar-nav mr-auto">
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" {# {{ path('list_film') }} #} > LES FILMS </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" {# {{ path('list_realisateur') }} #} > LES RÉALISATEURS </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" {# {{ path('list_bientot') }} #} > BIENTÔT À L'AFFICHE </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" {# {{ path('list_top') }} #} > LES TOPS DE LA RÉDACTION </a>
+                    </li>
+
+                    <li class="nav-item">
+                        {% if is_granted("ROLE_USER") %}
+                            <a class="nav-link" href= {{ path('app_logout') }}  > Logout </a>
+                        {% else %}
+                            <a class="nav-link" href= {{ path('app_login') }}  > Login </a>
+                        {% endif %}
+                    </li>
+
+                    <li class="nav-item">
+                        {% if is_granted("ROLE_ADMIN") %}
+                            <a class="nav-link" href= {{ path('enregistrer_admin') }}  > Admin </a>
+                        {% endif %}
+                    </li>
+        
+                </ul>
+            </nav>
+        </div>
+
+        {% block body %}
+        {% endblock %}
+
     </body>
+
 </html>
