FilmController FilmType Template Films

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,11 +31,11 @@
                 <ul class="navbar-nav mr-auto">
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#" {# {{ path('list_film') }} #} > LES FILMS </a>
+                        <a class="nav-link" href= {{ path('liste_film') }} > LES FILMS </a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#" {# {{ path('list_realisateur') }} #} > LES RÉALISATEURS </a>
+                        <a class="nav-link" href= {{ path('list_realisateur') }} > LES RÉALISATEURS </a>
                     </li>
 
                     <li class="nav-item">
