--- a/templates/realisateurs/list.html.twig
+++ b/templates/realisateurs/list.html.twig
@@ -9,6 +9,7 @@
         <th>Nom</th>
         <th>Prénom</th>
         <th>Détails</th>
+        <th>Gestion</th>
     </thead>
     <tbody>
         {% for realisateur in realisateurList %}
@@ -16,7 +17,12 @@
             <td>{{ realisateur.prenom }}</td>
             <td>{{ realisateur.nom }}</td>
             <td>
-                <a href={{ path('detail_realisateur', {id:realisateur.id})}} class="btn btn-primary">Voir plus</a></li>
+                <a href={{ path('detail_realisateur', {id:realisateur.id}) }} class="btn btn-primary">Voir plus</a></li>
+            </td>
+            <td>
+                <a href={{ path('update_realisateur', {id:realisateur.id}) }}
+                    class="btn btn-primary ml-4 mr-4">Modifier</a>
+                <a href={{ path('delete_realisateur', {id:realisateur.id}) }} class="btn btn-danger mr-4">Supprimer</a>
             </td>
         </tr>
         {% endfor %}
