création de GenreController.php, du Form GenreType.php et des templates genres   +   correction Films en bonne voie mais pas encore résolue

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,6 +38,10 @@
                     </li>
 
                     <li class="nav-item">
+                        <a class="nav-link" href= {{ path('list_genre') }} > LES GENRES </a>
+                    </li>
+
+                    <li class="nav-item">
                         <a class="nav-link" href="#" {# {{ path('list_bientot') }} #} > BIENTÔT À L'AFFICHE </a>
                     </li>
 
