--- a/templates/films/create.html.twig
+++ b/templates/films/create.html.twig
@@ -5,7 +5,9 @@
 
 {% block body %}
 
-    <h1> Ajout d'un nouveau film </h1>
-    {{ form (form) }}
+<br>
+<h1 class="text-center"> Ajout d'un nouveau film </h1>
+<br>
+{{ form (form) }}
 
 {% endblock %}
