--- a/templates/realisateurs/create.html.twig
+++ b/templates/realisateurs/create.html.twig
@@ -3,6 +3,10 @@
 {% block title %} Nouveau réalisateur {% endblock %}
 
 {% block body %}
-<h1>Ajouter un réalisateur </h1>
+
+<br>
+<h1 class="text-center"> Ajouter un réalisateur </h1>
+<br>
 {{ form(form) }}
+
 {% endblock %}
