--- a/templates/realisateurs/list.html.twig
+++ b/templates/realisateurs/list.html.twig
@@ -3,8 +3,12 @@
 {% block title %}Réalisateurs{% endblock %}
 
 {% block body %}
-<h1>Liste des réalisateurs</h1>
-<table class="table" id="author_table">
+
+<br>
+<h1 class="text-center"> Liste des réalisateurs </h1>
+<br>
+
+<table class="table" id="realisateur_table">
     <thead>
         <th>Nom</th>
         <th>Prénom</th>
@@ -17,11 +21,11 @@
             <td>{{ realisateur.prenom }}</td>
             <td>{{ realisateur.nom }}</td>
             <td>
-                <a href={{ path('detail_realisateur', {id:realisateur.id}) }} class="btn btn-primary">Voir plus</a></li>
+                <a href={{ path('detail_realisateur', {id:realisateur.id}) }} class="btn btn-primary">Voir plus</a>
             </td>
             <td>
                 <a href={{ path('update_realisateur', {id:realisateur.id}) }}
-                    class="btn btn-primary ml-4 mr-4">Modifier</a>
+                    class="btn btn-warning ml-4 mr-4">Modifier</a>
                 <a href={{ path('delete_realisateur', {id:realisateur.id}) }} class="btn btn-danger mr-4">Supprimer</a>
             </td>
         </tr>
