--- a/templates/realisateurs/update.html.twig
+++ b/templates/realisateurs/update.html.twig
@@ -1,8 +1,13 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Modifier le réalisateur{% endblock %}
+{% block title %} Modifier le réalisateur {% endblock %}
+
 
 {% block body %}
-<h1>Modifier le réalisateur</h1>
+
+<br>
+<h1 class="text-center"> Modifier le réalisateur </h1>
+<br>
 {{ form(form) }}
+
 {% endblock %}
