--- a/templates/realisateurs/list.html.twig
+++ b/templates/realisateurs/list.html.twig
@@ -33,4 +33,5 @@
     </tbody>
 </table>
 
+<a href={{ path('create_realisateur') }} class="btn btn-primary ml-4 mr-4">Ajouter un nouveau réalisateur</a>
 {% endblock %}
