--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,7 @@
 
         {% block stylesheets %}
             <link rel="stylesheet" type="text/css" href={{ asset('css/bootstrap.css')}} />
+            <link rel="stylesheet" type="text/css" href={{ asset('css/style.css')}} />
             <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css" />
         {% endblock %}
 
@@ -20,49 +21,35 @@
     </head>
 
 
-    <body>
+    <body class="bg-secondary">
 
-        
 
-        <div class="container-fluid">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-2">
 
-            <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+        <img class="w-75 h-100" src={{ asset('img/logoProjet.jpg')}} alt=""></div>
 
-                <ul class="navbar-nav mr-auto">
+        <div class="col-sm-10" style="background-image: url({{ asset('img/banniereProjetCopie.jpg')}}); background-size: cover; opacity:0.7">  
+    </div>
+        <div class="container-fluid p-0">
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" {# {{ path('list_film') }} #} > LES FILMS </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" {# {{ path('list_realisateur') }} #} > LES RÉALISATEURS </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" {# {{ path('list_bientot') }} #} > BIENTÔT À L'AFFICHE </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" {# {{ path('list_top') }} #} > LES TOPS DE LA RÉDACTION </a>
-                    </li>
-
-                    <li class="nav-item">
-                        {% if is_granted("ROLE_USER") %}
-                            <a class="nav-link" href= {{ path('app_logout') }}  > Logout </a>
-                        {% else %}
-                            <a class="nav-link" href= {{ path('app_login') }}  > Login </a>
-                        {% endif %}
-                    </li>
-
-                    <li class="nav-item">
-                        {% if is_granted("ROLE_ADMIN") %}
-                            <a class="nav-link" href= {{ path('enregistrer_admin') }}  > Admin </a>
-                        {% endif %}
-                    </li>
-        
-                </ul>
-            </nav>
+        <nav class="nav bg-secondary d-flex justify-content-around py-3">
+        <a class="nav-link text-warning" href="#">FILMS</a>
+        <a class="nav-link text-warning" href="#">REALISATEURS</a>
+        <a class="nav-link text-warning" href="#">BIENTOT A L'AFFICHE</a>
+        <a class="nav-link text-warning" href="#">TOP DE LA REDAC'</a>
+        <a class="nav-link text-warning" href="#">CONNEXION</a>
+        </nav>
         </div>
+</div>
+    
+    <div class="d-flex justify-content-center mt-5">
+        <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/Jaws.jpg')}} alt=""></a>
+        <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/heredite.jpg')}} alt=""></a>
+        <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/Shining.jpg')}} alt=""></a>
+        <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/Scream.jpg')}} alt=""></a>
+    </div>
 
         {% block body %}
         {% endblock %}
