--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,7 @@
     {% block javascripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"> </script>
     <script type="application/javascript" src="//cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"> </script>
-    <script src="js/script.js" type="text/javascript"></script>
+    <script src="{{ asset('js/script.js') }}" type="text/javascript"></script>
     {% endblock %}
 
 </head>
@@ -47,6 +47,8 @@
 
                     {% if is_granted("ROLE_USER") %}
                     <a class="nav-link text-warning" href={{ path('app_logout') }}>SE DECONNECTER</a>
+                    <a class="nav-link text-warning" href={{ path('detail_utilisateur') }}>ESPACE
+                        PERSONNEL</a>
                     {% else %}
                     <a class="nav-link text-warning" href={{ path('app_login') }}>CONNEXION</a>
                     {% endif %}
