utilisateur modif info personelles (a suivre pb de mot de passe)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,8 +73,10 @@
 
     </div>
 
-    {% block body %}
-    {% endblock %}
+    <div class="container">
+        {% block body %}
+        {% endblock %}
+    </div>
 </body>
 
 </html>
