--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,8 @@
 
         <meta charset="UTF-8">
         <title> {% block title %} Fantasclic {% endblock %} </title>
-
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
         {% block stylesheets %}
             <link rel="stylesheet" type="text/css" href={{ asset('css/bootstrap.css')}} />
             <link rel="stylesheet" type="text/css" href={{ asset('css/style.css')}} />
@@ -20,79 +21,62 @@
 
     </head>
 
+    <body class="bg-secondary" style="font-family: 'Pangolin', cursive;">
 
-    <body class="bg-secondary">
-
-
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-2">
-
-        <img class="w-75 h-100" src={{ asset('img/logoProjet.jpg')}} alt=""></div>
-
-        <div class="col-sm-10" style="background-image: url({{ asset('img/banniereProjetCopie.jpg')}}); background-size: cover; opacity:0.7">  
-    </div>
-        <div class="container-fluid p-0">
-
-<<<<<<< HEAD
-        <nav class="nav bg-secondary d-flex justify-content-around py-3">
-        <a class="nav-link text-warning" href="#">FILMS</a>
-        <a class="nav-link text-warning" href="#">REALISATEURS</a>
-        <a class="nav-link text-warning" href="#">BIENTOT A L'AFFICHE</a>
-        <a class="nav-link text-warning" href="#">TOP DE LA REDAC'</a>
-        <a class="nav-link text-warning" href="#">CONNEXION</a>
-        </nav>
-=======
-                    <li class="nav-item">
-                        <a class="nav-link" href= {{ path('list_film') }} > LES FILMS </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href= {{ path('list_realisateur') }} > LES RÉALISATEURS </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href= {{ path('list_genre') }} > LES GENRES </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" {# {{ path('list_bientot') }} #} > BIENTÔT À L'AFFICHE </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" {# {{ path('list_top') }} #} > LES TOPS DE LA RÉDACTION </a>
-                    </li>
-
-                    <li class="nav-item">
-                        {% if is_granted("ROLE_USER") %}
-                            <a class="nav-link" href= {{ path('app_logout') }}  > Logout </a>
-                        {% else %}
-                            <a class="nav-link" href= {{ path('app_login') }}  > Login </a>
-                        {% endif %}
-                    </li>
-
-                    <li class="nav-item">
-                        {% if is_granted("ROLE_ADMIN") %}
-                            <a class="nav-link" href= {{ path('register_admin') }}  > Admin </a>
-                        {% endif %}
-                    </li>
-        
-                </ul>
-            </nav>
->>>>>>> 6b5a4645400ed1efef2f603d6999c5620b725ac3
-        </div>
-</div>
+    <header style="background-image: url('img/banniereProjetCopie.jpg'); background-size: cover; opacity:0.8; height:25rem; position:relative">
     
-    <div class="d-flex justify-content-center mt-5">
+<div class="container-fluid p-0" style="width:100%; height:400px; position:absolute; background:rgba(0,0,0,0.5); backdrop-filter:blur(1px)">
+
+        <div style="text-align:center; margin-top:4rem">
+        <img src={{ asset('img/logoFantasclic.jpg')}} alt="">
+        </div>
+        
+</div>
+
+        {# <div class="container-fluid p-0" style="position:absolute; bottom:0">
+
+        </div> #}
+
+    </header>
+    
+<nav class="navbar navbar-expand-lg navbar-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav mx-auto">
+      <a class="nav-link text-danger mr-5 text-uppercase" href="#">films</a>
+      <a class="nav-link text-danger mr-5 text-uppercase" href="#">réalisateurs</a>
+      <a class="nav-link text-danger mr-5 text-uppercase" href="#">catégories</a>
+      <a class="nav-link text-danger mr-5 text-uppercase" href="#">bientôt à l'affiche</a>
+      <a class="nav-link text-danger mr-5 text-uppercase" href="#">top de la rédac'</a>
+      <a class="nav-link text-danger mr-5 text-uppercase" href="#">connexion</a>
+    </div>
+  </div>
+</nav>
+
+    <div class="d-flex justify-content-center flex-wrap mt-5">
         <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/Jaws.jpg')}} alt=""></a>
         <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/heredite.jpg')}} alt=""></a>
         <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/Shining.jpg')}} alt=""></a>
         <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/Scream.jpg')}} alt=""></a>
     </div>
 
-        {% block body %}
-        {% endblock %}
 
+
+        <footer class="bg-dark">
+
+<div class="d-flex justify-content-around">
+
+<a class="text-danger" href="#">Contact</a>
+<a class="text-danger" href="#">Qui sommes-nous ?</a>
+
+</div>
+
+        </footer>
+        
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     </body>
 
 </html>
