--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,8 +4,8 @@
 
 <head>
 
-        <meta charset="UTF-8">
-        <title> {% block title %} Fantasclic {% endblock %} </title>
+    <meta charset="UTF-8">
+    <title> {% block title %} Fantasclic {% endblock %} </title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
         {% block stylesheets %}
@@ -15,46 +15,62 @@
         {% endblock %}
 
     {% block javascripts %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"> </script>
-    <script type="application/javascript" src="//cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"> </script>
-    <script src="{{ asset('js/script.js') }}" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"> </script>
+        <script type="application/javascript" src="//cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"> </script>
+        <script src="{{ asset('js/script.js') }}" type="text/javascript"></script>
     {% endblock %}
 
 </head>
 
-    <body class="bg-secondary" style="font-family: 'Pangolin', cursive;">
 
-    <header style="background-image: url('img/banniereProjetCopie.jpg'); background-size: cover; opacity:0.8; height:25rem; position:relative">
+<body class="bg-secondary" style="font-family: 'Pangolin', cursive;">
+
+<header style="background-image: url('img/banniereProjetCopie.jpg'); background-size: cover; opacity:0.8; height:25rem; position:relative">
     
-<div class="container-fluid p-0" style="width:100%; height:400px; position:absolute; background:rgba(0,0,0,0.5); backdrop-filter:blur(1px)">
+    <div class="container-fluid p-0" style="width:100%; height:400px; position:absolute; background:rgba(0,0,0,0.5); backdrop-filter:blur(1px)">
 
         <div style="text-align:center; margin-top:4rem">
-        <img src={{ asset('img/logoFantasclic.jpg')}} alt="">
+            <img src={{ asset('img/logoFantasclic.jpg')}} alt="">
         </div>
         
-</div>
+    </div>
 
         {# <div class="container-fluid p-0" style="position:absolute; bottom:0">
 
         </div> #}
 
-    </header>
+</header>
     
-<nav class="navbar navbar-expand-lg navbar-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav mx-auto">
-      <a class="nav-link text-danger mr-5 text-uppercase" href="#">films</a>
-      <a class="nav-link text-danger mr-5 text-uppercase" href="#">réalisateurs</a>
-      <a class="nav-link text-danger mr-5 text-uppercase" href="#">catégories</a>
-      <a class="nav-link text-danger mr-5 text-uppercase" href="#">bientôt à l'affiche</a>
-      <a class="nav-link text-danger mr-5 text-uppercase" href="#">top de la rédac'</a>
-      <a class="nav-link text-danger mr-5 text-uppercase" href="#">connexion</a>
-    </div>
-  </div>
-</nav>
+    <nav class="navbar navbar-expand-lg navbar-light">
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
+            <div class="navbar-nav mx-auto">
+
+                <a class="nav-link text-danger mr-5 text-uppercase" href= {{ path('list_film') }} > films </a>
+                <a class="nav-link text-danger mr-5 text-uppercase" href= {{ path('list_realisateur') }}> réalisateurs </a>
+                <a class="nav-link text-danger mr-5 text-uppercase" href= {{ path('list_genre') }}> genres </a>
+                <a class="nav-link text-danger mr-5 text-uppercase" href="#"> bientôt à l'affiche </a>
+                <a class="nav-link text-danger mr-5 text-uppercase" href="#"> top de la rédac' </a>
+                
+                {% if is_granted("ROLE_USER") %}
+                    <a class="nav-link text-warning" href={{ path('app_logout') }}>SE DECONNECTER</a>
+                    <a class="nav-link text-warning" href={{ path('detail_utilisateur') }}>ESPACE
+                    PERSONNEL</a>
+                {% else %}
+                    <a class="nav-link text-warning" href={{ path('app_login') }}>CONNEXION</a>
+                {% endif %}
+
+                {% if is_granted("ROLE_ADMIN") %}
+                    <a href={{ path('register_admin')}} class="nav-link">Nouveau compte admin</a>
+                {% endif %} </a>
+            </div>
+        </div>
+    </nav>
 
     <div class="d-flex justify-content-center flex-wrap mt-5">
         <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/Jaws.jpg')}} alt=""></a>
@@ -65,19 +81,23 @@
 
 
 
-        <footer class="bg-dark">
+<footer class="bg-dark">
 
-<div class="d-flex justify-content-around">
+    <div class="d-flex justify-content-around">
 
-<a class="text-danger" href="#">Contact</a>
-<a class="text-danger" href="#">Qui sommes-nous ?</a>
+        <a class="text-danger" href="#">Contact</a>
+        <a class="text-danger" href="#">Qui sommes-nous ?</a>
 
-</div>
+    </div>
 
-        </footer>
+</footer>
         
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    </body>
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
+</body>
 
 </html>
