--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -1,12 +1,17 @@
-{% extends "base.html.twig" %} 
+{% extends "base.html.twig" %}
 
 {% block title %} Page d'accueil {% endblock %}
 
 
-{% block body %} 
+{% block body %}
 
 
-
+<div class="d-flex justify-content-center flex-wrap mt-5">
+    <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/Jaws.jpg')}} alt=""></a>
+    <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/heredite.jpg')}} alt=""></a>
+    <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/Shining.jpg')}} alt=""></a>
+    <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/Scream.jpg')}} alt=""></a>
+</div>
 
 
 
