--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,6 +37,9 @@
 
         </div>
 
+        {# <div class="container-fluid p-0" style="position:absolute; bottom:0">
+
+        </div> #}
 
     </header>
 
