--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
+{% block title %}Contact{% endblock %}
 
+{% block body %}
+<h1>Formulaire de contact</h1>
+<p>* champs obligatoire</p>
 {{ form(form) }}
 {% endblock %}
