suite formulaire de contact

--- a/templates/emails/contact.html.twig
+++ b/templates/emails/contact.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Contact{% endblock %}
+{% block title %}Nous contacter{% endblock %}
 
 {% block body %}
-<h1>Formulaire de contact</h1>
+<h1>Nous contacter</h1>
 <p>* champs obligatoire</p>
 {{ form(form) }}
 {% endblock %}
