--- a/templates/utilisateurs/create.html.twig
+++ b/templates/utilisateurs/create.html.twig
@@ -15,7 +15,7 @@
 </div>
 <div class="row">
     <div class="col-6">
-        {{ form(form.anneeNaissance) }}
+        <!-- {{ form(form.anneeNaissance) }} -->
     </div>
     <div class="col-6">
         {{ form_row(form.avatar) }}
